fix: only float TOC on very wide screens to avoid covering content

--- a/themes/simple/assets/css/main.css
+++ b/themes/simple/assets/css/main.css
@@ -2047,7 +2047,7 @@ a {
   opacity: 1;
 }
 
-@media (min-width: 960px) {
+@media (min-width: 1360px) {
   .post .toc {
     position: fixed;
     top: 120px;
